# keycloak-mocks

./: CLAUDE.md  Makefile  README.md  ci-test-script.sh  docker-compose.test.yml  docker-compose.yml  quick_test.py
.claude/: settings.local.json
.github/workflows/: keycloak-auth-tests.yml
keycloak/import/: test-realm.json
test-apps/oidc-client/: index.html  nginx.conf
test-apps/saml-sp/: Dockerfile  index.html  package.json  server.js
test-results/: report.html  test-results.xml
tests/: Dockerfile  conftest.py  pyproject.toml  requirements.txt  test_local_auth.py  test_oauth2_client_credentials.py  test_oidc_auth.py  test_saml_auth.py
