[project]
name = "keycloak-auth-tests"
version = "1.0.0"
description = "Authentication tests for Keycloak mock environments"
requires-python = ">=3.11"
authors = [
    { name = "Keycloak Test Suite" }
]

dependencies = [
    "pytest==7.4.0",
    "pytest-html==3.2.0",
    "pytest-json-report==1.5.0",
    "requests==2.31.0",
    "python-keycloak==3.7.0",
    "PyJWT==2.8.0",
    "cryptography==41.0.3",
    "lxml==4.9.3",
    "xmlsec==1.3.13",
    "python3-saml==1.15.0",
    "selenium==4.11.2",
    "webdriver-manager==4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
]
markers = [
    "oidc: OIDC authentication tests",
    "saml: SAML authentication tests", 
    "oauth2: OAuth2 authentication tests",
    "local: Local authentication tests",
    "integration: Integration tests",
    "unit: Unit tests",
]

[tool.uv]
dev-dependencies = []